# land-modeling-tool

./: .gitignore  README.md  pyproject.toml
config/: buy_score.yaml  data_sources.yaml  desk.yaml  investment_edge.yaml  scoring_weights.yaml  signals.yaml
data/candidates/: README.md  candidates.csv
data/sample/: hard_negatives.json  nodes.json  parcels.json  projects.json
docs/: LAND_DESK_BUILD_PLAN.md  MASTER_IDEA.md  PLAN.md  ninety_day_proof.md
src/land_modeling_tool/: __init__.py  cli.py  config.py  pipeline.py
src/land_modeling_tool/atlas/: __init__.py  development_atlas.py  patterns.py
src/land_modeling_tool/backtest/: __init__.py  labels.py
src/land_modeling_tool/data/: __init__.py  candidate_intake.py  loaders.py  registry.py
src/land_modeling_tool/desk/: __init__.py  call_sheets.py  control_strategy.py  deal_math.py  deal_queue.py  fatal_gates.py  feedback.py  legal_control.py  scenario_bands.py  thesis_matrix.py  types.py  weekly_report.py
src/land_modeling_tool/export/: __init__.py  geojson.py  map_html.py
src/land_modeling_tool/models/: __init__.py  types.py
src/land_modeling_tool/proof/: __init__.py  diligence_memo.py  ninety_day.py
src/land_modeling_tool/scoring/: __init__.py  assemblage.py  buy_score.py  evidence.py  gates.py  nodes.py  parcels.py  signals.py
src/land_modeling_tool/temporal/: store.py
tests/: test_desk.py  test_pipeline.py
