[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "land-modeling-tool"
version = "0.1.0"
description = "Infrastructure-option land intelligence for Indiana/Midwest parcel acquisition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pandas>=2.2",
  "geopandas>=1.0",
  "shapely>=2.0",
  "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
land-model = "land_modeling_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
